SimGrid (3.4-svn) unstable; urgency=high

 OVERALL CHANGES:
  * Also include strbuff from xbt.h public header
  
 GRAS:
  * fix a bug on struct sizeof computation, which prevented the
    exchange of arrays of structs in some conditions
    
 MSG:
  * Allow to control the simulation from a trace file.
    New functions MSG_action_register() and MSG_action_trace_run()
    The first one allows to associate a function execution to each
     kind of action while the second one parses a trace file and
     triggers the corresponding actions within the system.
    For now, only a toy example is provided in examples/msg/actions
  * Add an exemple of process migration in examples/msg/migration
  * Fix a bug in task exchange which broke MSG_task_get_sender()
    Add a teshsuite regression test for that.
    [Bug: if MSG_task_get_sender() is called after sender exit,
     bad things happen]
     
 SIMIX:
  * Add SIMIX_process_set_name() to change the name of the current
    process in the log messages.

 XBT:
  * xbt_ex_display(): do not free the exception after displaying 
    This allows to do more with the given exception afterward.
    Users should call xbt_ex_free() themselves. 

 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr> 

SimGrid (3.3) stable; urgency=high

 OVERALL CHANGES:

  * JAVA BINDINGS for MSG (you dreamt of them? We made them)
    [Malek Cherier & Mt]

  * Introduce the SIMIX module: factorize code between MSG and GRAS.
    [Bruno Donassolo]
  
    Until now, GRAS were using MSG as an interface to SURF. It was
    quite difficult because both interface have several differences
    (MSG channels vs GRAS sockets were the most notable point).
   
    This also opens the gate to SMPI (which should occur soon) and speed
    up simulations by to 40% (even if it were not the main goal).
  
    ************************************** 
    *DO NOT MIX 3.2 RESULTS WITH 3.3 ONES* Simix may changes simulations!
    **************************************